# evaluate-poo-2021-2022

./: 143_Besliu_Radu-Stefan.cpp  143_Cazacu_CristianGabriel.rar  143_Chiricuta_marina_anca.cpp  143_Cringanu_Denis-Florin.cpp  143_Cristea_Petru-Theodor.cpp  143_Crivoi_Carla.cpp  143_Cucos_Maria-Marianita.cpp  143_DILIRICI_MIHAI.cpp  143_Dumitru_Paul.cpp  143_Florea_MadalinAlexandru.cpp  143_Gheorghe_Robert-Mihai.cpp  143_Ghetoiu_Laurentiu.cpp  143_Hutan_Mihai-Alexandru.cpp  143_Lung_Alexandra.cpp  143_MEREALBE_BRIANA.cpp  143_Militaru_Mihai-Alexandru.cpp  143_Nafornita_Adrian.cpp.cpp  143_Nechita_Maria-Ilinca.cpp  143_Niculita_Cristiana.cpp  143_Pasare_Roxana-Francisca.cpp  143_Paun_Andreea-Alexandra.cpp  143_Petre_Vasile-Eduard.cpp  143_Stanciu_Ioan-Carol.cpp  143_Tanasa_FlorinPetrisor.cpp  143_Tillinger_Marius.cpp  143_Totolici_Alexandru.cpp  CMakeLists.txt  Readme.md  barem_v5.odt  main.py
143_Alhafez NABIL/: CMakeLists.txt  main.cpp
143_Alhafez NABIL/collections/: IoBase.h  biletele.h  cardurile.h  date.h  enumerable.h  functions.cpp
143_Cazacu_CristianGabriel/: 143_Cazacu_CristianGabriel.cpp  CMakeLists.txt  bilet.cpp  bilet.h  card.cpp  card.h  ioBase.cpp  ioBase.h  meniu.cpp  meniu.h  validator.cpp  validator.h
