
# add_executable(colocviu_143 "143_Besliu_Radu-Stefan.cpp")
# add_executable(colocviu_143 "143_Chiricuta_marina_anca.cpp")
# add_executable(colocviu_143 "143_Cringanu_Denis-Florin.cpp")
# add_executable(colocviu_143 "143_Cristea_Petru-Theodor.cpp")
# add_executable(colocviu_143 "143_Crivoi_Carla.cpp")
# add_executable(colocviu_143 "143_Cucos_Maria-Marianita.cpp")
# add_executable(colocviu_143 "143_DILIRICI_MIHAI.cpp")
# add_executable(colocviu_143 "143_Dumitru_Paul.cpp")
# add_executable(colocviu_143 "143_Florea_MadalinAlexandru.cpp")
# add_executable(colocviu_143 "143_Gheorghe_Robert-Mihai.cpp")
# add_executable(colocviu_143 "143_Ghetoiu_Laurentiu.cpp")
# add_executable(colocviu_143 "143_Hutan_Mihai-Alexandru.cpp")
# add_executable(colocviu_143 "143_Lung_Alexandra.cpp")
# add_executable(colocviu_143 "143_MEREALBE_BRIANA.cpp")
# add_executable(colocviu_143 "143_Militaru_Mihai-Alexandru.cpp")
# add_executable(colocviu_143 "143_Nafornita_Adrian.cpp.cpp")
# add_executable(colocviu_143 "143_Nechita_Maria-Ilinca.cpp")
# add_executable(colocviu_143 "143_Niculita_Cristiana.cpp")
# add_executable(colocviu_143 "143_Pasare_Roxana-Francisca.cpp")
# add_executable(colocviu_143 "143_Paun_Andreea-Alexandra.cpp")
# add_executable(colocviu_143 "143_Petre_Vasile-Eduard.cpp")
# add_executable(colocviu_143 "143_Stanciu_Ioan-Carol.cpp")
# add_executable(colocviu_143 "143_Tanasa_FlorinPetrisor.cpp")
# add_executable(colocviu_143 "143_Tillinger_Marius.cpp")
# add_executable(colocviu_143 "143_Totolici_Alexandru.cpp")